# Multidisciplinary_Paper_Benchmark

./: .gitignore  CHANGELOG.md  GUIDE.md  LICENSE  Makefile  README.md  batch_results.json  comparison_hypothesis_generation.md  eval_results.json  eval_results_trace.json  eval_results_v7.json  generate_benchmark_ppt.py  generate_multimodel_radar.py  generate_nature_comm_report.py  generate_radar_charts.py  generate_report_pptx.py  generate_report_word.py  generate_x5_radar.py  model_availability_results.json  plot_radar.py  pyproject.toml  requirements.txt  run.py  run_comparison_experiment.sh  run_eval_and_radar.py  run_full_pipeline.sh  run_full_pipeline_p1p5.sh  run_multimodel_eval.sh  run_multimodel_eval_16metrics.py  run_nature_comm_100.sh  run_nature_comm_1000_v1.sh  run_nature_comm_100_v2.sh  run_nature_comm_100_v3.sh  run_nature_comm_100_v4.sh  run_nature_comm_100_v5.sh  run_nature_comm_100_v6.sh  run_nature_comm_3000_v1.sh  run_nature_nc_2024_downstream_eval.sh  run_nature_nc_2024_eval_2025_validity.sh  run_nature_nc_2024_gt_1000.sh  (+10 more)
.github/workflows/: ci.yml
baseline/: __init__.py  common.py  convert_input.py  demo_showcase.py  evaluate_all.py  evaluate_batch.py  generate_comparison_report.py  prepare_6papers.py  run_6paper_experiment.py  run_batch_demo.py  run_comparison.py  run_single_paper_demo.py
baseline/adapters/: __init__.py  ai_scientist.py  crossdisc.py  ideabench.py  moose_chem.py  prompt_level.py  sciagents.py  scimon.py  vanilla_llm.py
baseline/data/: alphafold_paper.json  papers_6_2025.json  papers_unified.json
baseline/outputs/: all_results.json  alphafold_hypotheses.json  batch_results.json  batch_results0313.json  batch_results111.json  comparison_summary.json  demo_hypotheses.json  eval_results.json
benchmark_baseline/HypoBench-master/: README.md  _config.yml  index.md
benchmark_baseline/IdeaBench/: README.md  environment.yml  example.ipynb  requirements.txt
benchmark_baseline/MOOSE-Chem-main/: README.md
benchmark_baseline/TruthHypo-main/: README.md  run_pipeline.py
configs/: default.yaml  experiment_v1.yaml
crossdisc_extractor/: __init__.py  config.py  extractor_multi_stage.py  graph_builder.py  pipeline.py  schemas.py
crossdisc_extractor/benchmark/: build_dataset.py  eval_prompts.py  evaluate_benchmark.py  evaluate_benchmark_validity.py  gt_builder.py  gt_prompts.py  metrics.py  terminology.py  web_search.py
crossdisc_extractor/classifier/: __init__.py  config.py  hierarchical.py  hierarchical_async.py  result.py  validator.py
crossdisc_extractor/prompts/: __init__.py  hypothesis_prompt.py  hypothesis_prompt_levels.py  hypothesis_prompt_split.py  query_prompt.py  struct_prompt.py  struct_prompt_split.py
crossdisc_extractor/utils/: __init__.py  llm.py  parsing.py  pdf_utils.py  summarize.py  usage_telemetry.py
data/: classified.csv  classified_1.csv  classified_2.csv  discipline_mapping_en_zh.json  msc_converted.json  paper_1.json
docs/: CrossDisc_Benchmark.pptx  benchmark_advantages_summary.md  benchmark_ppt_content.md  evaluation_metrics_complete.md  evaluation_metrics_integrated.md  proposed_new_metrics.md
outputs/: 项目运行流程详解.docx  项目运行流程详解.pptx
outputs/full_pipeline_run/: eval_results.json  test_extraction.json
outputs/multimodel_eval_v7/: benchmark_dataset.json  classified.jsonl  eval_16metricsnohup  extraction_results.json  (+6 more)
paper/: neurips_2025.sty  neurips_crossdisc_bench.tex
scripts/: __init__.py  analyze_benchmark_validity.py  build_query_eval_set.py  classify.py  diagnose_temporal_run.py  evaluate_classification.py  extract_introduction.py  extract_paper.py  merge_data.py  prepare_temporal_papers.py  run_demo.py  sample_balanced_journals.py  sample_dataset.py  summarize_llm_usage.py  summarize_stage_timings.py  verify_term_flow.py
tests/: test_classifier_config.py  test_classifier_llm.py  test_classifier_taxonomy.py  test_classifier_utils.py  test_classifier_validator.py  test_config.py  test_diagnose_temporal_run.py  test_evaluate.py  test_gt_builder.py  test_metrics.py  test_parsing.py  test_query_prompt_recovery.py  test_runtime_fallbacks.py  test_schemas.py  test_temporal_workflow.py  test_usage_summary.py
(+501 files in other folders)
